--- a/AcmClient/MainWindow.xaml
+++ b/AcmClient/MainWindow.xaml
@@ -22,51 +22,53 @@
 				<Grid Name="personalPage">
 					<Grid.RowDefinitions>
 						<RowDefinition Height="1*"/>
-						<RowDefinition Height="2*"/>
+						<RowDefinition Height="*"/>
 					</Grid.RowDefinitions>
 					<materialDesign:Card Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="20,20,20,20">
 						<Grid Name="DataBinding">
 							<Grid.Resources>
-								<Style TargetType="TextBlock" BasedOn="{StaticResource MaterialDesignBody1TextBlock}"/>
+								<Style TargetType="TextBlock" BasedOn="{StaticResource MaterialDesignBody1TextBlock}">
+									
+								</Style>
+								
 							</Grid.Resources>
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="3*"/>
+							<Grid.ColumnDefinitions><!--个人信息左中右-->
+								<ColumnDefinition Width="5*"/>
 								<ColumnDefinition Width="4*"/>
-								<ColumnDefinition Width="1*"/>
+								<ColumnDefinition Width="2*"/>
 							</Grid.ColumnDefinitions>
 
-							
-							<Grid Name="ValueInfo" Grid.Column="0">
+							<StackPanel Grid.Column="0" Name="ValueInfo" Orientation="Vertical">
+								<StackPanel Orientation="Horizontal">
+									<TextBlock VerticalAlignment="Center" Text="Rank: "/>
+									<TextBlock VerticalAlignment="Center" Text="{Binding Rank}"/>
+								</StackPanel>
+								<StackPanel Orientation="Horizontal">
+									<TextBlock VerticalAlignment="Center" Text="Problems Submitted: "/>
+									<TextBlock VerticalAlignment="Center" Text="{Binding Submitted}"/>
+								</StackPanel>
+								<StackPanel Orientation="Horizontal">
+									<TextBlock VerticalAlignment="Center" Text="Problems Solved: "/>
+									<TextBlock VerticalAlignment="Center" Text="{Binding Solved}"/>
+								</StackPanel>
 								
-								<Grid.ColumnDefinitions>
-									<ColumnDefinition Width="1*"/>
-									<ColumnDefinition Width="1*"/>
-								</Grid.ColumnDefinitions>
-								<Grid.RowDefinitions>
-									<RowDefinition Height="1*"/>
-									<RowDefinition Height="1*"/>
-									<RowDefinition Height="1*"/>
-								</Grid.RowDefinitions>
-								<TextBlock  VerticalAlignment="Center" Grid.Column="0" Grid.Row="0" Text="Rank: "/>
-								<TextBlock  VerticalAlignment="Center" Grid.Column="0" Grid.Row="1" Text="Problems Submitted: "/>
-								<TextBlock VerticalAlignment="Center" Grid.Column="0" Grid.Row="2" Text="Problems Solved: "/>
-								<TextBlock  VerticalAlignment="Center" Grid.Column="1" Grid.Row="0" Text="{Binding Rank}"/>
-								<TextBlock  VerticalAlignment="Center" Grid.Column="1" Grid.Row="1" Text="{Binding Submitted}"/>
-								<TextBlock VerticalAlignment="Center" Grid.Column="1" Grid.Row="2" Text="{Binding Solved}"/>
-							</Grid>
-							<GridSplitter IsEnabled="False" Grid.Column="1" Width="2" HorizontalAlignment="Stretch" Margin="10.333,0,362,0"/>
+							</StackPanel>
+							<GridSplitter IsEnabled="False" Grid.Column="1" Width="2" HorizontalAlignment="Stretch" Margin="42,0,228,0"/>
 							<Grid Name="UserBlock" Grid.Column="2">
-								<Grid.RowDefinitions>
+								<Grid.RowDefinitions><!--头像区设定-->
 									<RowDefinition Height="5*"/>
 									<RowDefinition Height="2*"/>
 									<RowDefinition Height="1*"/>
 								</Grid.RowDefinitions>
-								<Image Grid.Row="0" 
-									Source="/Sources/icon.jpg"
-									Width="{Binding Path=Width,RelativeSource={RelativeSource Mode=FindAncestor , AncestorType={x:Type Grid}}}"
-									/>
-								<TextBlock Grid.Row="1" Text="{Binding nickName}" FontSize="15"/>
-								<TextBlock Grid.Row="2" Text="{Binding Motto}" />
+								<materialDesign:Card  Background="LightGray" UniformCornerRadius="10">
+									<Grid>
+										
+										<Image Grid.Row="0" Source="/Sources/icon.jpg" />
+									</Grid>
+								</materialDesign:Card>
+								
+								<TextBlock TextAlignment="Center" Grid.Row="1" Text="{Binding nickName}" FontSize="15"/>
+								<TextBlock TextAlignment="Center" Grid.Row="2" Text="{Binding Motto}" Padding="0,10,0,0"/>
 							</Grid>
 						</Grid>
 					</materialDesign:Card>
