--- a/AcmClient/MainWindow.xaml
+++ b/AcmClient/MainWindow.xaml
@@ -29,11 +29,12 @@
 						<Grid Name="DataBinding">
 							<Grid.Resources>
 								<Style TargetType="TextBlock" BasedOn="{StaticResource MaterialDesignBody1TextBlock}">
-									
+
 								</Style>
-								
+
 							</Grid.Resources>
-							<Grid.ColumnDefinitions><!--个人信息左中右-->
+							<Grid.ColumnDefinitions>
+								<!--个人信息左中右-->
 								<ColumnDefinition Width="5*"/>
 								<ColumnDefinition Width="4*"/>
 								<ColumnDefinition Width="2*"/>
@@ -52,22 +53,23 @@
 									<TextBlock VerticalAlignment="Center" Text="Problems Solved: "/>
 									<TextBlock VerticalAlignment="Center" Text="{Binding Solved}"/>
 								</StackPanel>
-								
+
 							</StackPanel>
 							<GridSplitter IsEnabled="False" Grid.Column="1" Width="2" HorizontalAlignment="Stretch" Margin="42,0,228,0"/>
 							<Grid Name="UserBlock" Grid.Column="2">
-								<Grid.RowDefinitions><!--头像区设定-->
+								<Grid.RowDefinitions>
+									<!--头像区设定-->
 									<RowDefinition Height="5*"/>
 									<RowDefinition Height="2*"/>
 									<RowDefinition Height="1*"/>
 								</Grid.RowDefinitions>
 								<materialDesign:Card  Background="LightGray" UniformCornerRadius="10">
 									<Grid>
-										
+
 										<Image Grid.Row="0" Source="/Sources/icon.jpg" />
 									</Grid>
 								</materialDesign:Card>
-								
+
 								<TextBlock TextAlignment="Center" Grid.Row="1" Text="{Binding nickName}" FontSize="15"/>
 								<TextBlock TextAlignment="Center" Grid.Row="2" Text="{Binding Motto}" Padding="0,10,0,0"/>
 							</Grid>
@@ -78,11 +80,11 @@
 				</Grid>
 			</TabItem>
 			<TabItem Header="题目分类" Background="#CCFFFF">
-			
+
 			</TabItem>
 			<TabItem Header="题目页面" Background="#CCFFFF">
-				<StackPanel Orientation="Vertical">
-					<DockPanel >
+				<DockPanel  >
+					<DockPanel DockPanel.Dock="Top">
 						<ComboBox DockPanel.Dock="Left" Width="50" SelectedIndex="0">
 							<ComboBoxItem Content="111"/>
 							<ComboBoxItem Content="222"/>
@@ -93,14 +95,74 @@
 						<TextBox DockPanel.Dock="Right" Text="搜索题目"
 							Margin="0,0,10,0"
 							BorderBrush="LightBlue"/>
-						
+
 					</DockPanel>
-					<Grid>
-					
+					<Grid Name="VB" DockPanel.Dock="Bottom">
+						<ScrollViewer VerticalScrollBarVisibility="Auto" Style="{StaticResource MaterialDesignScrollViewer}" Height="{Binding Path=Height,ElementName=VB}" Name="ProblemScroll" >
+							<StackPanel Orientation="Vertical" Name="ProblemPage">
+								<StackPanel.Resources>
+									<Style TargetType="materialDesign:Card">
+										<Setter Property="Margin" Value="30,0,30,0"/>
+										<Setter Property="Padding" Value="5,5,5,5"/>
+									</Style>
+									<Style x:Key="CardLable" TargetType="TextBox">
+										<Setter Property="IsReadOnly" Value="True"/>
+										<Setter Property="BorderThickness" Value="0"/>
+										<Setter Property="Margin" Value="60,30,0,0"/>
+										<Setter Property="FontSize" Value="20"/>
+										<Setter Property="Foreground" Value="#7CA9ED"/>
+										<Setter Property="FontWeight" Value="Bold"/>
+									</Style>
+									<Style TargetType="TextBox">
+										<Setter Property="IsReadOnly" Value="True"/>
+										<Setter Property="BorderThickness" Value="0"/>
+									</Style>
+								</StackPanel.Resources>
+								<materialDesign:Card Margin="30,10,30,0">
+									<StackPanel Orientation="Vertical">
+										<TextBox Name="ProblemHead" Text="{Binding problemName}" TextAlignment="Center" FontSize="20"/>
+										<TextBox Name="ProblemValue" Text="{Binding problemValue}" Foreground="#7CA9ED" TextAlignment="Center" TextWrapping="Wrap"/>
+									</StackPanel>
+								</materialDesign:Card>
+								<TextBox Text="Problem Description" Style="{StaticResource CardLable}"/>
+								<materialDesign:Card>
+									<TextBox Text="{Binding Description}"/>
+								</materialDesign:Card>
+								<TextBox Text="Input" Style="{StaticResource CardLable}"/>
+								<materialDesign:Card>
+									<TextBox Text="{Binding Input}"/>
+								</materialDesign:Card>
+								<TextBox Text="Output" Style="{StaticResource CardLable}"/>
+								<materialDesign:Card>
+									<TextBox Text="{Binding Output}"/>
+								</materialDesign:Card>
+								<Grid>
+									<Grid.ColumnDefinitions>
+										<ColumnDefinition Width="Auto"/>
+										<ColumnDefinition Width="Auto"/>
+									</Grid.ColumnDefinitions>
+									<TextBox Grid.Column="0" Text="Sample Input" Style="{StaticResource CardLable}"/>
+									<Button Grid.Column="1" Content="复制输入" Height="Auto" FontSize="10" Margin="24.667,30,-18.667,4.333" Click="CopyInput" />
+								</Grid>
+
+								<materialDesign:Card>
+
+									<TextBox Text="{Binding sampleInput}"/>
+								</materialDesign:Card>
+								<TextBox Text="Sample Output" Style="{StaticResource CardLable}"/>
+								<materialDesign:Card>
+									<TextBox Text="{Binding sampleOutput}"/>
+								</materialDesign:Card>
+
+								<UniformGrid Margin="0,10,0,0">
+									<Button Content="Submit" />
+								</UniformGrid>
+							</StackPanel>
+						</ScrollViewer>
 					</Grid>
-				</StackPanel>
+
+				</DockPanel>
 			</TabItem>
-			
 		</TabControl>
 	</Grid>
 
