--- a/AcmClient/MainWindow.xaml
+++ b/AcmClient/MainWindow.xaml
@@ -155,7 +155,7 @@
 								</materialDesign:Card>
 
 								<UniformGrid Margin="0,10,0,0">
-									<Button Content="Submit" />
+									<Button Content="Submit" Click="SubmitAction"/>
 								</UniformGrid>
 							</StackPanel>
 						</ScrollViewer>
