--- a/AcmClient/SubmitWindow.xaml
+++ b/AcmClient/SubmitWindow.xaml
@@ -1,12 +1,33 @@
-﻿<Window x:Class="AcmClient.SubmitWindow"
+﻿<Controls:MetroWindow 
+		xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+		x:Class="AcmClient.SubmitWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AcmClient"
         mc:Ignorable="d"
-        Title="SubmitWindow" Height="300" Width="300">
+        Title="SubmitWindow" Height="400" Width="400"
+		>
     <Grid>
-        
-    </Grid>
-</Window>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="20"/>
+			<RowDefinition Height="*"/>
+			<RowDefinition Height="30"/>
+		</Grid.RowDefinitions>
+		<Canvas Grid.Row="0">
+			<TextBox Name="ProblemId" Canvas.Left="30" Width="60" BorderBrush="LightBlue" BorderThickness="1"/>
+			<ComboBox Name="Compiler" Canvas.Right="30" >
+				<ComboBoxItem  IsSelected="True" Content="G++"/>
+				<ComboBoxItem Content="GCC"/>
+				<ComboBoxItem Content="C++"/>
+				<ComboBoxItem Content="C"/>
+				<ComboBoxItem Content="Pascal"/>
+				<ComboBoxItem Content="Java"/>
+				<ComboBoxItem Content="C#"/>
+			</ComboBox>
+		</Canvas>
+		<RichTextBox Grid.Row="1" BorderBrush="LightBlue" BorderThickness="1" Margin="5,10,5,5"/>
+		<Button Content="Submit" Grid.Row="2" Height="20" Click="Button_Click" Padding="0,0,0,0"/>
+	</Grid>
+</Controls:MetroWindow>
