--- a/AcmClient/SubmitWindow.xaml
+++ b/AcmClient/SubmitWindow.xaml
@@ -28,6 +28,6 @@
 			</ComboBox>
 		</Canvas>
 		<RichTextBox Name="Code" Grid.Row="1" BorderBrush="LightBlue" BorderThickness="1" Margin="5,10,5,5"/>
-		<Button Content="Submit" Grid.Row="2" Height="20" Click="Button_Click" Padding="0,0,0,0"/>
+		<Button Content="Submit" Grid.Row="2" Height="20" Click="Submit" Padding="0,0,0,0"/>
 	</Grid>
 </Controls:MetroWindow>
