--- a/AcmClient/MainWindow.xaml
+++ b/AcmClient/MainWindow.xaml
@@ -15,68 +15,84 @@
 	Title="AcmClient"
 	Height="600"
 	Width="800"
+	MinWidth="800"
 	AllowsTransparency="True">
 	<Grid Background="#CCFFFF">
 
 		<TabControl Name="tab" Foreground="White">
 			<TabItem Header="个人信息" Background="#CCFFFF">
-				<Grid Name="personalPage">
-					<Grid.RowDefinitions>
-						<RowDefinition Height="5*"/>
-						<RowDefinition Height="*"/>
-					</Grid.RowDefinitions>
-					<materialDesign:Card Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="20,20,20,20">
-						<Grid Name="DataBinding">
-							<Grid.Resources>
-								<Style TargetType="TextBlock" BasedOn="{StaticResource MaterialDesignBody1TextBlock}">
+				<ScrollViewer>
+					<Grid Name="personalPage">
+						<Grid.RowDefinitions>
+							<RowDefinition Height="5*"/>
+							<RowDefinition Height="auto"/>
+						</Grid.RowDefinitions>
+						<materialDesign:Card Grid.Row="0" HorizontalAlignment="Center" Padding="20,20,20,20" Margin="0,20,0,0" MinWidth="600">
+							<Grid Name="DataBinding">
+								<Grid.Resources>
+									<Style TargetType="TextBlock" BasedOn="{StaticResource MaterialDesignBody1TextBlock}">
 
-								</Style>
-
-							</Grid.Resources>
-							<Grid.RowDefinitions>
-								<RowDefinition Height="10*"/>
-								<RowDefinition Height="3*"/>
-							</Grid.RowDefinitions>
-							<StackPanel Grid.Row="1" Name="ValueInfo" Orientation="Horizontal">
-								<StackPanel Orientation="Vertical" Margin="30,30,30,30">
-									<TextBlock VerticalAlignment="Center" Text="{Binding Rank}"/>
-									<TextBlock VerticalAlignment="Center" Text="Rank"/>
-								</StackPanel>
-								<StackPanel Orientation="Vertical" Margin="30,30,30,30">
-									<TextBlock VerticalAlignment="Center" Text="{Binding Submitted}"/>
-									<TextBlock VerticalAlignment="Center" Text="Problems Submitted"/>
-								</StackPanel>
-								<StackPanel Orientation="Vertical" Margin="30,30,30,30">
-									<TextBlock VerticalAlignment="Center" Text="{Binding Solved}"/>
-									<TextBlock VerticalAlignment="Center" Text="Problems Solved"/>
-								</StackPanel>
-							</StackPanel>
-							<!--<GridSplitter IsEnabled="False" Grid.Column="1" Width="2" HorizontalAlignment="Stretch" Margin="42,0,228,0"/>-->
-							<Grid Name="UserBlock" Grid.Row="0">
+									</Style>
+									<Style TargetType="TextBlock" x:Key="BaseCenterTextStyle">
+										<Setter Property="HorizontalAlignment" Value="Center"/>
+										<Setter Property="VerticalAlignment" Value="Center"/>
+									</Style>
+									<Style x:Key="PersonValueTextStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseCenterTextStyle}">
+										<Setter Property="FontSize" Value="20"/>
+										<Setter Property="Margin" Value="0,20,0,0"/>
+									</Style>
+								</Grid.Resources>
 								<Grid.RowDefinitions>
-									<!--头像区设定-->
-									<RowDefinition Height="5*"/>
-									<RowDefinition Height="2*"/>
-									<RowDefinition Height="1*"/>
+									<RowDefinition Height="10*"/>
+									<RowDefinition Height="3*"/>
 								</Grid.RowDefinitions>
-								<materialDesign:Card  Background="LightGray" UniformCornerRadius="10" Width="200" Height="200">
-									
-										<Image  Source="/Sources/icon.jpg" />
-									
-								</materialDesign:Card>
+								<Grid Grid.Row="1" Name="ValueInfo">
+									<Grid.ColumnDefinitions>
+										<ColumnDefinition Width="1*"/>
+										<ColumnDefinition Width="1*"/>
+										<ColumnDefinition Width="1*"/>
+									</Grid.ColumnDefinitions>
+									<StackPanel  Grid.Column="0" Orientation="Vertical">
+										<TextBlock Style="{StaticResource PersonValueTextStyle}" Text="{Binding Rank}"/>
+										<TextBlock Style="{StaticResource BaseCenterTextStyle}" Text="Rank"/>
+									</StackPanel>
+									<StackPanel Grid.Column="1" Orientation="Vertical" >
+										<TextBlock Style="{StaticResource PersonValueTextStyle}" Text="{Binding Submitted}"/>
+										<TextBlock Style="{StaticResource BaseCenterTextStyle}" Text="Problems Submitted"/>
+									</StackPanel>
+									<StackPanel Grid.Column="2" Orientation="Vertical">
+										<TextBlock Style="{StaticResource PersonValueTextStyle}" Text="{Binding Solved}"/>
+										<TextBlock Style="{StaticResource BaseCenterTextStyle}" Text="Problems Solved"/>
+									</StackPanel>
+								</Grid>
+								<!--<GridSplitter IsEnabled="False" Grid.Column="1" Width="2" HorizontalAlignment="Stretch" Margin="42,0,228,0"/>-->
+								<Grid Name="UserBlock" Grid.Row="0">
+									<Grid.RowDefinitions>
+										<!--头像区设定-->
+										<RowDefinition Height="5*"/>
+										<RowDefinition Height="2*"/>
+										<RowDefinition Height="1*"/>
+									</Grid.RowDefinitions>
+									<materialDesign:Card  Background="LightGray" UniformCornerRadius="10" Width="200" Height="200">
 
-								<TextBlock TextAlignment="Center" Grid.Row="1" Text="{Binding nickName}" FontSize="15"/>
-								<TextBlock TextAlignment="Center" Grid.Row="2" Text="{Binding Motto}" Padding="0,10,0,0"/>
+										<Image  Source="/Sources/icon.jpg" />
+
+									</materialDesign:Card>
+
+									<TextBlock TextAlignment="Center" Grid.Row="1" Text="{Binding nickName}" FontSize="15"/>
+									<TextBlock TextAlignment="Center" Grid.Row="2" Text="{Binding Motto}" Padding="0,10,0,0"/>
+								</Grid>
 							</Grid>
+						</materialDesign:Card>
+						<Grid Grid.Row="1">
 						</Grid>
-					</materialDesign:Card>
-					<Grid Grid.Row="1">
 					</Grid>
-				</Grid>
+				</ScrollViewer>
+
 			</TabItem>
 			<TabItem Header="题目列表" Background="#CCFFFF">
 				<StackPanel Name="ProblemSet" Orientation="Vertical">
-					
+
 				</StackPanel>
 			</TabItem>
 			<TabItem Header="题目页面" Background="#CCFFFF">
@@ -93,9 +109,9 @@
 							Margin="0,0,10,0"
 							BorderBrush="LightBlue"
 							Name="SearchProblemText"/>
-						
+
 					</DockPanel>
-					
+
 					<Grid Name="VB" DockPanel.Dock="Bottom">
 						<ScrollViewer VerticalScrollBarVisibility="Auto" Style="{StaticResource MaterialDesignScrollViewer}" Height="{Binding Path=Height,ElementName=VB}" Name="ProblemScroll" >
 							<StackPanel Orientation="Vertical" Name="ProblemPage">
